Passage de la 1.21.5 à 1.21.1 (Downgrade) car plus simple + Ajout des blocs de nids & plume de cigogne

--- a/src/main/resources/assets/storkmod/lang/en_us.json
+++ b/src/main/resources/assets/storkmod/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "item.storkmod.stork_catcher": "Stork Catcher"
+  "item.storkmod.stork_catcher": "Stork Catcher",
+  "item.storkmod.stork_feather": "Stork Feather",
+
+  "block.storkmod.stork_nest_block": "Stork Nest Block"
 }
