Ajout des tradutions françaises + Chisel et modif StorkCatcher

--- a/src/main/resources/assets/storkmod/lang/en_us.json
+++ b/src/main/resources/assets/storkmod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.storkmod.stork_catcher": "Stork Catcher",
   "item.storkmod.stork_feather": "Stork Feather",
   "item.storkmod.stork_egg": "Stork Egg",
+  "item.storkmod.chisel": "Chisel",
 
   "block.storkmod.stork_nest_block": "Stork Nest Block",
 
